tests/paczka1/fuzzy1/81024364.err
Error in line 2: HKUCN S145 5,3
Error in line 9: X0cu7L7Vlc S145 5,6
Error in line 21: 9Vpy3faoU S450 23,6
